--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,29 @@ aiosignal==1.3.2
 asyncio==3.4.3
 attrs==25.3.0
 beautifulsoup4==4.13.4
+Brotli==1.1.0
 bs4==0.0.2
+certifi==2025.6.15
 frozenlist==1.7.0
+greenlet==3.2.3
+h11==0.16.0
 idna==3.10
 multidict==6.5.0
+outcome==1.3.0.post0
 propcache==0.3.2
 py-cord==2.6.1
+pyee==13.0.0
+PySocks==1.7.1
+selenium==4.33.0
 setuptools==78.1.1
+sniffio==1.3.1
+sortedcontainers==2.4.0
 soupsieve==2.7
-typing_extensions==4.14.0
+trio==0.30.0
+trio-websocket==0.12.2
+typing_extensions==4.13.2
+urllib3==2.4.0
+websocket-client==1.8.0
 wheel==0.45.1
+wsproto==1.2.0
 yarl==1.20.1
