--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ propcache==0.3.2
 py-cord==2.6.1
 pyee==13.0.0
 PySocks==1.7.1
+python-dotenv==1.1.0
 selenium==4.33.0
 setuptools==78.1.1
 sniffio==1.3.1
