--- a/requirements.txt
+++ b/requirements.txt
@@ -13,13 +13,12 @@ h11==0.16.0
 idna==3.10
 multidict==6.5.0
 outcome==1.3.0.post0
+pillow==11.2.1
 propcache==0.3.2
-py-cord==2.6.1
+py-cord @ git+https://github.com/Pycord-Development/pycord@8619b6902b79b72438e229b2715e0c7642b70333
 pyee==13.0.0
 PySocks==1.7.1
 python-dotenv==1.1.0
-selenium==4.33.0
-setuptools==78.1.1
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.7
@@ -28,6 +27,5 @@ trio-websocket==0.12.2
 typing_extensions==4.13.2
 urllib3==2.4.0
 websocket-client==1.8.0
-wheel==0.45.1
 wsproto==1.2.0
 yarl==1.20.1
