--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohappyeyeballs==2.6.1
 aiohttp==3.12.13
 aiohttp-client-cache==0.13.0
 aiosignal==1.3.2
+async-timeout==5.0.1
 asyncio==3.4.3
 attrs==25.3.0
 beautifulsoup4==4.13.4
@@ -10,11 +11,14 @@ Brotli==1.1.0
 bs4==0.0.2
 certifi==2025.6.15
 click==8.2.1
+dnspython==2.7.0
+exceptiongroup==1.3.0
 frozenlist==1.7.0
 greenlet==3.2.3
 h11==0.16.0
 idna==3.10
 itsdangerous==2.2.0
+motor==3.7.1
 multidict==6.5.0
 mypy_extensions==1.1.0
 outcome==1.3.0.post0
@@ -25,11 +29,13 @@ platformdirs==4.3.8
 propcache==0.3.2
 py-cord @ git+https://github.com/Pycord-Development/pycord@8619b6902b79b72438e229b2715e0c7642b70333
 pyee==13.0.0
+pymongo==4.13.2
 PySocks==1.7.1
 python-dotenv==1.1.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.7
+tomli==2.2.1
 trio==0.30.0
 trio-websocket==0.12.2
 typing_extensions==4.13.2
